--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,6 +1,8 @@
 name: Run crank
 
 on:
+  schedule:
+    - cron: "0 * * * *"
   push:
     branches:
       - main
@@ -30,4 +32,5 @@ jobs:
         id: run-bot
         env:
           RPC_URL: ${{ secrets.RPC_URL }}
+          BOT_PK: ${{ secrets.BOT_PK }}
         run: yarn start
